# realsense_pcl

./: CMakeLists.txt  README.md  package.xml
launch/: obstacle_detection.launch
messages/: CMakeLists.txt  package.xml
pcl_messages/: CMakeLists.txt  package.xml
pcl_messages/msg/: CollisionTrajectory.msg
realsense_pcl/: CMakeLists.txt  package.xml
realsense_pcl/launch/: Untitled Document  collision_detection.launch  obstacle_detection.launch
realsense_pcl/src/: collision_detection.cpp  collision_detection_old.cpp  downsample.cpp  feedbackController.cpp  pointcloud_transformer.cpp
src/: collision_detection.cpp  corridor_check.cpp  downsample.cpp  planar_segmentation.cpp
